# idp-ingestion-example

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  catalog-info.yaml  grpc-api.yaml  openapi.yaml  pyproject.toml
docs/: conf.py  installation.rst
python_boilerplate/: __init__.py
service_with_docs/: catalog-info.yaml
src/python_boilerplate/: cli.py
workflows/: conditional-example.yaml  docker_domain.yaml  dynamic-picker-with-dependency.yaml  dynamic-picker.yaml  invalid-tags.yaml  k8s_domain.yaml  user-identity.yaml  valid-tags.yaml
