[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_boilerplate"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "Himanshu Mishra", email = "himanshu@orkohunter.net"}
]
maintainers = [
  {name = "Himanshu Mishra", email = "himanshu@orkohunter.net"}
]
classifiers = [

]
license = {text = "Apache Software License 2.0"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/orkohunter/python_boilerplate/issues"
changelog = "https://github.com/orkohunter/python_boilerplate/blob/master/changelog.md"
homepage = "https://github.com/orkohunter/python_boilerplate"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

